--- a/LIBRE.desktop
+++ b/LIBRE.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/V10;sleep 5;lxterminal --geometry=72x15 -e sudo sh ejecutar_LIBRE.sh'
-Icon=/home/pi/V10/LIBRE.png
+Exec=sh -c 'cd /home/pi/V104;sleep 10;lxterminal --geometry=72x15 -e sudo sh ejecutar_LIBRE.sh'
+Icon=/home/pi/V104/LIBRE.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
