--- a/SVXLINK.desktop
+++ b/SVXLINK.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/ECHOLINK.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir SVXLINK
 Hidden=false
 Comment[es_ES]=EA3EIZ
