--- a/YSF.desktop
+++ b/YSF.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/C4FM.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir YSF
 Hidden=false
 Comment[es_ES]=EA3EIZ
