--- a/DMR2NXDN.desktop
+++ b/DMR2NXDN.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/DMR2NXDN.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir DMR2NXDN
 Hidden=false
 Comment[es_ES]=EA3EIZ
