--- a/DSTARSOLO_05.desktop
+++ b/DSTARSOLO_05.desktop
@@ -6,7 +6,7 @@ Comment=
 Exec=sh -c "cd /home/pi/V104/;sleep 10;lxterminal --geometry=80x20 -e sudo sh ejecutar_solodstar.sh"
 Icon=/home/pi/V104/SOLO_D-STAR.png
 Path=/home/pi/V104
-Terminal=true
+Terminal=false
 StartupNotify=false
 Name[es_ES]=Abrir solo D-STAR
 
