--- a/LIBRE.desktop
+++ b/LIBRE.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/LIBRE.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir LIBRE
 Hidden=false
 Comment[es_ES]=EA3EIZ_
