--- a/NXDN.desktop
+++ b/NXDN.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/ICONO_NXDN_OFF.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir NXDN
 Hidden=false
 Comment[es_ES]=EA3EIZ
