--- a/LIBRE.desktop
+++ b/LIBRE.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/V104;sleep 10;lxterminal --geometry=72x15 -e sudo sh ejecutar_LIBRE.sh'
-Icon=/home/pi/V104/LIBRE.png
+Exec=sh -c 'cd /home/pi/V104;sleep 10;lxterminal --geometry=72x15 -e sudo sh ejecutar_ESPECIAL.sh'
+Icon=/home/pi/V104/ICONO_ESPECIAL_ON.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
 Terminal=false
-Name[es_ES]=Abrir LIBRE
+Name[es_ES]=Abrir Especial
 Hidden=false
 Comment[es_ES]=EA3EIZ_
 
