--- a/BM.desktop
+++ b/BM.desktop
@@ -2,6 +2,6 @@
 Version=1.0
 Type=Application
 Terminal=false
-Icon=/home/pi/V104/ICONO_BM.OFF.png
+Icon=/home/pi/V104/ICONO_BM_OFF.png
 Exec=sh -c 'cd /home/pi/V104;sleep 10;lxterminal --geometry=80x15 -e sudo sh ejecutar_bm.sh'
 Name=Abrir BM
