--- a/AMBE_SERVER.desktop
+++ b/AMBE_SERVER.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/AMBER_SERVER.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir AMBE SERVER
 Hidden=false
 Comment[es_ES]=EA3EIZ
