--- a/DMR2YSF.desktop
+++ b/DMR2YSF.desktop
@@ -6,7 +6,7 @@ Icon=/home/pi/V104/ICONO_DMR2YSF_OFF.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
-Terminal=true
+Terminal=false
 Name[es_ES]=Abrir DMR2YSF
 Hidden=false
 Comment[es_ES]=EA3EIZ
