--- a/IRCDDB.desktop
+++ b/IRCDDB.desktop
@@ -9,6 +9,6 @@ Categories=GTK;Utility;TerminalEmulator;
 Terminal=false
 Name[es_ES]=Abrir ircDDB
 Hidden=false
-Comment[es_ES]=EA3EIZ
+Comment[es_ES]=EA3EIZ-
 
 
